--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -63,13 +63,30 @@ body .form-horizontal .control-label {
 }
 
 .content-header {
-    ul {
-      font-size: 24px;
-      font-weight: 300;
-      li {
-        padding-top: 20px;
-      }
+    .row {
+        position: relative;
+
+        h1 {
+        }
+
+        h2 {
+          color: #9d9d9d;
+          margin-bottom: 20px;
+        }
+
+        ul {
+          font-size: 24px;
+          font-weight: 300;
+          li {
+            padding-top: 20px;
+          }
+        }
     }
+}
+
+.box-bottom {
+   position: absolute;
+   bottom: 0px; 
 }
 
 a[ng-click] {
