--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -1,4 +1,4 @@
-<div class="content-header header-shadow" style="min-height: 370px;">
+<div class="content-header header-shadow" style="min-height: 370px">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container property">
     <div class="row">
         <div class="col-sm-12 property-list">
 
