--- a/angular/src/less/properties.less
+++ b/angular/src/less/properties.less
@@ -1,3 +1,12 @@
+.container.property {
+    h5 {
+      font-size: 20px;
+      font-weight: 600;
+      margin-top: 0px;
+      margin-bottom: 15px;
+    }
+}
+
 .property-list {
 
   padding-top: 20px;
@@ -28,12 +37,6 @@
        color: #666666; 
       }
 
-    }
-
-    h5 {
-      font-size: 20px;
-      font-weight: 600;
-      margin-bottom: 15px;
     }
 
   }
