--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -33,7 +33,7 @@
 
                     <div class="property-row-price"><strong>Starting Offer</strong> ${{property.rent}}</div>
 
-                    <div class="property-row-features">{{property.beds}} Beds, {{property.baths}} Baths</div>
+                    <div class="property-row-features" style="margin-bottom: 20px;">{{property.beds}} Beds, {{property.baths}} Baths</div>
 
                     <div class="property-row-offers" ng-include="'property/partials/offers.tpl.html'">
                     </div>
