--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -1,4 +1,4 @@
-<div class="content-header header-shadow" style="min-height: 370px">
+<div class="content-header header-shadow property-list-header">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
