--- a/angular/src/less/properties.less
+++ b/angular/src/less/properties.less
@@ -1,3 +1,11 @@
+body.loggedin .property-list-header {
+   min-height: 270px;
+}
+
+.property-list-header {
+   min-height: 370px;
+}
+
 .container.property {
     h5 {
       font-size: 20px;
