--- a/angular/src/app/property/details.tpl.html
+++ b/angular/src/app/property/details.tpl.html
@@ -16,7 +16,7 @@
         <div class="col-sm-6">
             <div class="property-detail-offers" ng-include="'property/partials/offers.tpl.html'"></div>
             <div class="property-detail-bid" ng-include="'property/partials/bid.tpl.html'"></div>
-            <div class="property-detail-overview" ng-include="'property/partials/overview.tpl.html'"></div>
+            <div class="property-detail-overview" ng-include="'property/partials/overview.tpl.html'" style="margin-bottom: 30px;"></div>
         </div>
     </div>
     <!-- /.row -->
