--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -23,10 +23,10 @@
     </div>
 
     <div class="row" style="margin-top: 30px;">
-        <div class="col-sm-6 text-right">
+        <div class="col-xs-6 text-right">
             <a class="btn btn-rented" ng-click="watch()">Add To Watchlist</a>
         </div>
-        <div class="col-sm-6">
+        <div class="col-xs-6">
             <button type="submit" class="btn btn-rented">Make An Offer</button>
         </div>
     </div>
