--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -6,6 +6,7 @@
 
 @import "variables.less";
 @import "../app/user/less/login.less";
+@import "../app/user/less/navbar.less";
 @import "header.less";
 @import "home.less";
 @import "footer.less";
@@ -26,6 +27,7 @@
 
 #main-header {
   min-height: 60px;
+  background-color: #ffffff;
 }
 
 .center {
