--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -6,11 +6,11 @@
            <div class="row" style="margin-top: 30px;">
               <div class="col-lg-4 col-sm-5">
                   <h3>Tenants</h3>
-                  <a href="#/register" class="btn btn-rented" role="button">Create Your Profile</a>
+                  <a href="#/tenants/on-boarding" class="btn btn-rented" role="button">Create Your Profile</a>
               </div>   
               <div class="col-lg-3 col-sm-3">
                   <h3>Owners/Managers</h3>
-                  <a href="#/register" class="btn btn-rented" role="button">Add Your Property</a>
+                  <a href="#/owners/add-property" class="btn btn-rented" role="button">Add Your Property</a>
               </div>   
            </div>
         </div>
