--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -15,7 +15,7 @@
         </li>
         <li ng-show-auth="['logout','error']"><a ng-class="isActive('/register')" href="#/register">Register</a>
         </li>
-        <li class="menuparent" ng-show-auth="'login'"><a ng-class="isActive('/account')" href="#/account">My Account</a>
+        <li class="menuparent" ng-show-auth="'login'"><a class="nav-user" href="#/profile"><img src="http://placehold.it/34x34" class="img-circle"> Andrea Amerigo Aristodemo</a>
         </li>
         <li ng-show-auth="'login'"><a href="#/logout" onclick="return confirm('Are you sure you want to logout?')">Sign Out</a>
         </li>
