--- a/angular/src/app/tenant/partials/menu-tenant.tpl.html
+++ b/angular/src/app/tenant/partials/menu-tenant.tpl.html
@@ -3,6 +3,6 @@
        <li><a href="#/tenants/on-boarding" class="first" ng-class="isActive('/tenants/on-boarding')">On Boarding</a></li>
        <li><a href="#/tenants/dashboard" ng-class="isActive('/tenants/dashboard')">My Dashboard</a></li>
        <li><a href="#/tenants/properties" ng-class="isActive('/tenants/properties')">My Properties</a></li>
-       <li><a href="#/tenants/profile" ng-class="isActive('/tenants/profile')">My Profile</a></li>
+       <li><a href="#/profile" ng-class="isActive('/profile')">My Profile</a></li>
     </ul>
 </div>
