rm livechat, better footer

--- a/angular/src/less/footer.less
+++ b/angular/src/less/footer.less
@@ -31,6 +31,10 @@
         .footer-help {
             padding-right: 0px;
         }
+
+        .footer-terms {
+            padding-left: 15px;
+        }
     }
 }
 
