--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -14,11 +14,11 @@
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/owners/free-properties.gif" class="center-block">
-                         <h4 class="text-center">Free for 5 properties</h4>
+                         <h4 class="text-center">Reduce vacancy time</h4>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/owners/pricing-tools.gif" class="center-block">
-                         <h4 class="text-center">Pricing tools &amp; market rent data</h4>
+                         <h4 class="text-center">Flexible Lease Signing</h4>
                     </div>
             </div>
 
@@ -29,13 +29,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Easy tenant screening</h4>
+                <h4>Easy Tenant Screening</h4>
                 <div class="row">
                     <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
-                    <ul class="col-sm-6 col-xs-12 list-unstyled">
-                       <li>Quick snapshot of all your applicants</li>
-                       <li>Side by side comparison of top offers</li>
-                       <li>Detailed views of property analytics</li>
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>No cost for tenant credit checks</li>
+                       <li>Compare multiple tenant offers side-by-side</li>
+                       <li>View tenant preferences</li>
                     </ul>
                 </div>
             </div>
@@ -47,12 +47,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Free for 5 properties</h4>
+                <h4>Reduce vacancy time</h4>
                 <div class="row">
                     <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
-                    <ul class="col-sm-7 col-xs-12 list-unstyled">
-                       <li>No hidden fees, no charges</li>
-                       <li>Ideal for owners who manage their own properties</li>
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>Pool of pre-qualified tenants</li>
+                       <li>Tenants provide their move-in date upfront</li>
+                       <li>Improved tenant retention</li>
                     </ul>
                 </div>
             </div>
@@ -64,13 +65,13 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Pricing tools &amp; market rent data</h4>
+                <h4>Flexible Lease Signing</h4>
                 <div class="row">
                     <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
-                    <ul class="col-sm-6 col-xs-12 list-unstyled">
-                       <li>See market rent for your property</li>
-                       <li>Negotiate rent one-on-one</li>
-                       <li>Data to help make accurate price decisions</li>
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>Ability to sign the lease online via <a href="https://www.docusign.com/" target="_blank">DocuSign</a></li>
+                       <li>Upload your own lease or use a standardized template</li>
+                       <li>Includes mandatory disclosures</li>
                     </ul>
                 </div>
             </div>
