--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -7,8 +7,9 @@
                 <h3 ng-show-auth="'logout'">Take a tour</h3> 
 
                 <ul ng-show-auth="'logout'">
-                   <li>View our recent available properties</li>
-                   <li><a href="#/login">Login</a> or <a href="#/register">register</a> to start adding properties you want to track</li>
+                   <li>View recent properties</li>
+                   <li>See how to make an offer</li>
+                   <li>View recent offers</li>
                 </ul>
 
             </div>
