--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -10,17 +10,15 @@
             <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/tenants/save-money.gif" class="center-block">
-                         <h4 class="text-center">Save on Application Fees</h4>
+                         <h4 class="text-center">One Application &amp; Credit Check for all Listings</h4>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/tenants/eliminate-scams.gif" class="center-block">
-                         <h4 class="text-center">Eliminate
-Scams</h4>
+                         <h4 class="text-center">Scam Free</h4>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/tenants/property-availability.gif" class="center-block">
-                         <h4 class="text-center">Real-Time
-Listing Status</h4>
+                         <h4 class="text-center">View Current Offers &amp; Status</h4>
                     </div>
             </div>
 
@@ -31,13 +29,13 @@ Listing Status</h4>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Save on Application Fees</h4>
+                <h4>One Application &amp; Credit Check for all Listings</h4>
                 <div class="row">
                     <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
-                    <ul class="col-sm-6 col-xs-12 list-unstyled">
-                       <li>One application for all properties</li>
-                       <li>Single credit check</li>
-                       <li>Save time and money!</li>
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>Save time with one online application</li>
+                       <li>Create an instantly shareable Credit Report for $10</li>
+                       <li>Invite owners to view your application and credit report</li>
                     </ul>
                 </div>
             </div>
@@ -49,12 +47,13 @@ Listing Status</h4>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Eliminate Scams</h4>
+                <h4>Scam Free</h4>
                 <div class="row">
                     <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
-                    <ul class="col-sm-6 col-xs-12 list-unstyled">
-                       <li>Owners and Managers are verified</li>
-                       <li>The listings are now accurate!</li>
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>Select your property with confidence</li>
+                       <li>Property owners and managers are verified</li>
+                       <li>Enhance your privacy and identity protection</li>
                     </ul>
                 </div>
             </div>
@@ -66,13 +65,13 @@ Listing Status</h4>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Real - Time Listing Status</h4>
+                <h4>View Current Offers &amp; Status</h4>
                 <div class="row">
                     <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
-                    <ul class="col-sm-7 col-xs-12 list-unstyled">
-                       <li>Make an offer that’s right for you</li>
-                       <li>Know right away if a property is still available</li>
-                       <li>See other offers</li>
+                    <ul class="col-sm-8 col-xs-12 list-unstyled">
+                       <li>Snapshot of your profile, credit score, rental offers, and message center</li>
+                       <li>Current availability of the property to rent</li>
+                       <li>Make an offer or add a property to watch-list</li>
                     </ul>
                 </div>
             </div>
