--- a/angular/src/less/features.less
+++ b/angular/src/less/features.less
@@ -11,7 +11,7 @@
    }
 
    .feature-stripe {
-      min-height: 330px;
+      padding-bottom: 36px;
       font-weight: 300;
       color: @gray-darker;
 
@@ -27,8 +27,6 @@
       }
 
       ul {
-        margin-bottom: 30px;
-
         font-size: 24px;
  
         li {
