--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -22,7 +22,7 @@
         <div class="col-sm-12 property-list">
 
             <div class="row property-row" ng-repeat="(id, property) in properties">
-                <img src="http://placehold.it/553x368" class="col-sm-6 col-xs-12" style="min-height: 368px;">
+                <img pl-holder="holder.js/553x368/auto/textmode:exact/^cccccc:^969696" class="col-sm-6 col-xs-12 img-responsive">
                 <div class="col-sm-6 col-xs-12">
                     <h3>
                         <a href="#/property/{{id}}">{{property.address}}</a>
