--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -31,7 +31,7 @@
             <div class="col-sm-12">
                 <h4>Easy Tenant Screening</h4>
                 <div class="row">
-                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
                        <li>No cost for tenant credit checks</li>
                        <li>Compare multiple tenant offers side-by-side</li>
@@ -49,7 +49,7 @@
             <div class="col-sm-12">
                 <h4>Reduce vacancy time</h4>
                 <div class="row">
-                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
                        <li>Pool of pre-qualified tenants</li>
                        <li>Tenants provide their move-in date upfront</li>
@@ -67,7 +67,7 @@
             <div class="col-sm-12">
                 <h4>Flexible Lease Signing</h4>
                 <div class="row">
-                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
                        <li>Ability to sign the lease online via <a href="https://www.docusign.com/" target="_blank">DocuSign</a></li>
                        <li>Upload your own lease or use a standardized template</li>
