--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -31,7 +31,7 @@
             <div class="col-sm-12">
                 <h4>One Application &amp; Credit Check for all Listings</h4>
                 <div class="row">
-                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
                        <li>Save time with one online application</li>
                        <li>Create an instantly shareable Credit Report for $10</li>
@@ -49,7 +49,7 @@
             <div class="col-sm-12">
                 <h4>Scam Free</h4>
                 <div class="row">
-                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
                        <li>Select your property with confidence</li>
                        <li>Property owners and managers are verified</li>
@@ -67,7 +67,7 @@
             <div class="col-sm-12">
                 <h4>View Current Offers &amp; Status</h4>
                 <div class="row">
-                    <img src="http://placehold.it/342x216" class="col-sm-4 col-xs-12">
+                    <img pl-holder="holder.js/336x208/auto/textmode:exact/^cccccc:^969696" class="col-sm-4 col-xs-12 img-responsive">
                     <ul class="col-sm-8 col-xs-12 list-unstyled">
                        <li>Snapshot of your profile, credit score, rental offers, and message center</li>
                        <li>Current availability of the property to rent</li>
