--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -8,20 +8,24 @@
             </div>
 
             <div class="row">
-                    <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
+                    <div class="col-sm-4 feature-icon">
                          <img src="assets/img/features/tenants/save-money.gif" class="center-block">
                          <h4 class="text-center">One Application &amp; Credit Check for all Listings</h4>
                     </div>
-                    <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
+                    <div class="col-sm-4 feature-icon">
                          <img src="assets/img/features/tenants/eliminate-scams.gif" class="center-block">
                          <h4 class="text-center">Scam Free</h4>
                     </div>
-                    <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
+                    <div class="col-sm-4 feature-icon">
                          <img src="assets/img/features/tenants/property-availability.gif" class="center-block">
                          <h4 class="text-center">View Current Offers &amp; Status</h4>
                     </div>
             </div>
-
+            <div class="row vertical-buffer">
+                    <div class="col-xs-12 text-center">
+                         <a href="#/tenants/on-boarding" class="btn btn-rented">Create Your Profile</a>
+                    </div>
+            </div>
     </div>
 </div>
 
