--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -94,3 +94,17 @@ body .form-horizontal .control-label {
 a[ng-click] {
   cursor: pointer;
 }
+
+.top-buffer {
+  margin-top: 30px;
+}
+
+.bottom-buffer {
+  margin-bottom: 30px;
+}
+
+.vertical-buffer {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
