--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -22,6 +22,11 @@
                     </div>
             </div>
 
+            <div class="row vertical-buffer">
+                    <div class="col-xs-12 text-center">
+                         <a href="#/owners/add-property" class="btn btn-rented">Add Your Property</a>
+                    </div>
+            </div>
     </div>
 </div>
 
