--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -37,6 +37,17 @@
                         <input type="password" class="form-control input-lg" placeholder="Password" ng-model="data.pass" required>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">Profile</label>
+                    <div class="col-sm-8">
+                        <select class="form-control input-lg" ng-model="data.profile">
+                               <option value="">Select...</option>
+                               <option value="tenant">Tenant</option>
+                               <option value="owner">Owner</option>
+                        </select>
+                    </div>
+                </div>
         </div>
     </div>
     <div class="row" style="margin-top: 55px;">
