--- a/angular/src/app/user/register.tpl.html
+++ b/angular/src/app/user/register.tpl.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-hide="profile">
     <div class="row">
         <div class="col-lg-11 center">
             <h1 class="page-title">Register</h1>
