--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -1,8 +1,6 @@
 @import "../assets/css/bootstrap.css";
-@import "../assets/css/font-awesome.css";
+//@import "../assets/css/font-awesome.css";
 @import "../assets/libraries/flexslider/flexslider.css";
-@import "../assets/css/font-roboto.css";
-/* @import "../assets/css/realocation.css"; */
 
 @import "variables.less";
 @import "../app/user/less/login.less";
@@ -13,6 +11,7 @@
 @import "buttons.less";
 @import "features.less";
 @import "properties.less";
+@import "roboto.less";
 
 @media (min-width: 1200px) {
     body .container {
