--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -1,4 +1,4 @@
-@import "../assets/css/bootstrap.css";
+@import "../assets/css/bootstrap.min.css";
 //@import "../assets/css/font-awesome.css";
 @import "../assets/libraries/flexslider/flexslider.css";
 
