squeezed feature rows

--- a/angular/src/less/features.less
+++ b/angular/src/less/features.less
@@ -11,15 +11,19 @@
    }
 
    .feature-stripe {
-      padding-bottom: 36px;
       font-weight: 300;
       color: @gray-darker;
+
+      .container > .row {
+        margin-top: 80px;
+        margin-bottom: 80px;
+      }
 
       h4 {
         font-size: 28px;
         font-weight: 300;
-        margin-top: 42px;
         margin-bottom: 27px;
+        margin-top: 0px;
       }
 
       img {
