--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -32,7 +32,7 @@
                         <a href="#/property/{{property.$id}}">{{property.city}}, {{property.state}} {{property.zip}}</a>
                     </h4><!-- /.property-row-subtitle -->
 
-                    <div class="property-row-price"><strong>Starting Offer</strong> ${{property.rent}}</div>
+                    <div class="property-row-price"><strong>Suggested Rent</strong> ${{property.rent}}</div>
 
                     <div class="property-row-features" style="margin-bottom: 20px;">{{property.beds}} Beds, {{property.baths}} Baths</div>
 
