--- a/angular/src/less/features.less
+++ b/angular/src/less/features.less
@@ -1,3 +1,12 @@
+.features-gradient {
+    background-image: -o-linear-gradient(bottom, #ffffff 15%, #f6f6f6 100%, #f6f6f6 100%);
+    background-image: -moz-linear-gradient(bottom, #ffffff 15%, #f6f6f6 100%, #f6f6f6 100%);
+    background-image: -webkit-linear-gradient(bottom, #ffffff 15%, #f6f6f6 100%, #f6f6f6 100%);
+    background-image: -ms-linear-gradient(bottom, #ffffff 15%, #f6f6f6 100%, #f6f6f6 100%);
+    background-image: linear-gradient(to bottom, #ffffff 15%, #f6f6f6 100%, #f6f6f6 100%);
+    //background-color: #f6f6f6;
+}
+
 #main-inner {
 
    .feature-icon {
