--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -12,6 +12,7 @@
 @import "features.less";
 @import "properties.less";
 @import "roboto.less";
+@import "navbar-arrow.less";
 
 @media (min-width: 1200px) {
     body .container {
@@ -58,6 +59,10 @@ body .form-horizontal .control-label {
      width: 100%;
 }
 
+.brand-stripe {
+     background-color: @brand-primary;
+     width: 100%;
+}
 
 .header-shadow {
      box-shadow: 0 0 3px #eeeeef;
