--- a/angular/src/less/main.less
+++ b/angular/src/less/main.less
@@ -13,6 +13,7 @@
 @import "properties.less";
 @import "roboto.less";
 @import "navbar-arrow.less";
+@import "form.less";
 
 @media (min-width: 1200px) {
     body .container {
@@ -110,5 +111,10 @@ a[ng-click] {
 .vertical-buffer {
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+.vertical-buffer-xl {
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 
