--- a/angular/src/app/owner/add-property.tpl.html
+++ b/angular/src/app/owner/add-property.tpl.html
@@ -1,199 +1,5 @@
 <div class="brand-stripe" ng-include="'owner/partials/add-property-navbar.tpl.html'">
 </div>
 
-<div class="container">
-    <form method="post" class="form-horizontal vertical-buffer-xl">
-
-        <div class="row text-center" style="position: relative;">
-
-            <div style="position: absolute; right: 15px;">
-               <button type="button" class="btn btn-rented">Add</button>
-               <button type="button" class="btn btn-rented">Edit</button>
-               <button type="button" class="btn btn-rented">Save</button>
-            </div>
-
-            <h1 style="margin-top: 0px;">Property 1</h1>
-
-        </div>
-
-        <div class="row">
-
-            <fieldset class="fieldset-required">
-               <legend>Address</legend>
-
-               <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">City</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.city">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">State</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.state">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Zip</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.zip">
-                       </div>
-                   </div>
-               </div>
-
-               <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Street</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.street">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Apt. number</label>
-                       <div class="col-sm-8">
-                          <input class="form-control input-lg" type="text" ng-model="property.aptNumber">
-                       </div>
-                   </div>
-               </div>
-
-            </fieldset>
-
-        </div>
-
-        <div class="row">
-
-            <fieldset class="fieldset-required">
-               <legend>Pricing</legend>
-
-               <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-8 control-label" ng-hide="property.dynamicPricing">Monthly Rent</label>
-                       <label class="col-sm-8 control-label" ng-show="property.dynamicPricing">Suggested Monthly Rent</label>
-                       <div class="col-sm-4">
-                          <input class="form-control input-lg" type="number" ng-model="property.targetRent">
-                       </div>
-                   </div>
-                   <div class="form-group" ng-show="property.dynamicPricing">
-                       <label class="col-sm-8 control-label">Lowest Acceptable Offer</label>
-                       <div class="col-sm-4">
-                          <input class="form-control input-lg" type="number" ng-model="property.lowestRent">
-                       </div>
-                   </div>
-               </div>
-
-               <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-4 control-label">Lease Term</label>
-                       <div class="col-sm-8">
-                          <select class="form-control input-lg" ng-model="property.leaseTerm">
-                              <option value="">Select...</option>
-                              <option value="1">Month-to-month</option>
-                              <option value="12">1 year</option>
-                              <option value="24">2 years</option>
-                              <option value="36">3 years</option>
-                          </select>
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <div class="col-sm-12">
-                         <div class="checkbox">
-                            <label class="control-label">
-                              <input type="checkbox" ng-model="property.dynamicPricing"> Enable Dynamic Pricing
-                            </label>
-                         </div>
-                       </div>
-                   </div>
-               </div>
-
-            </fieldset>
-
-        </div>
-
-        <div class="row">
-
-            <fieldset class="fieldset-required">
-               <legend>Move-In Information</legend>
-
-               <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-6 control-label">Available Date</label>
-                       <div class="col-sm-6">
-                          <input class="form-control input-lg" type="date" ng-model="property.available">
-                       </div>
-                   </div>
-                   <div class="form-group">
-                       <label class="col-sm-6 control-label">Security Deposit</label>
-                       <div class="col-sm-6">
-                          <input class="form-control input-lg" type="number" ng-model="property.securityDeposit">
-                       </div>
-                   </div>
-                   <div class="form-group" ng-show="property.allowDogs || property.allowCats || property.allowOther">
-                       <label class="col-sm-6 control-label">Pet Deposit</label>
-                       <div class="col-sm-6">
-                          <input class="form-control input-lg" type="number" ng-model="property.securityDeposit">
-                       </div>
-                   </div>
-               </div>
-
-               <div class="col-sm-6">
-                   <div class="form-group">
-                       <label class="col-sm-2 control-label">Pets</label>
-                       <div class="col-sm-6">
-                         <div class="row" style="height: 49px">
-                             <div class="checkbox col-sm-6">
-                                <label class="control-label">
-                                  <input type="checkbox" ng-model="property.allowDogs"> Dogs
-                                </label>
-                             </div>
-                             <div class="col-sm-6">
-                                <input class="form-control input-lg" type="number" ng-model="property.dogs" ng-show="property.allowDogs" placeholder="#">
-                             </div>
-                         </div>
-                         <div class="row" style="height: 49px">
-                             <div class="checkbox col-sm-6">
-                                <label class="control-label">
-                                  <input type="checkbox" ng-model="property.allowCats"> Cats
-                                </label>
-                             </div>
-                             <div class="col-sm-6">
-                                <input class="form-control input-lg" type="number" ng-model="property.cats" ng-show="property.allowCats" placeholder="#">
-                             </div>
-                         </div>
-                         <div class="row" style="height: 49px">
-                             <div class="checkbox col-sm-6">
-                                <label class="control-label">
-                                  <input type="checkbox" ng-model="property.allowOther"> Other
-                                </label>
-                             </div>
-                             <div class="col-sm-6">
-                                <input class="form-control input-lg" type="number" ng-model="property.other" ng-show="property.allowOther" placeholder="#">
-                             </div>
-                         </div>
-                       </div>
-                   </div>
-               </div>
-
-            </fieldset>
-
-        </div>
-
-        <div class="row">
-
-            <fieldset>
-               <legend>Upload Image</legend>
-
-               <div class="col-sm-4">
-                    <span class="btn btn-rented fileinput-button">
-                        Upload <span class="glyphicon glyphicon-cloud-upload"></span>
-                        <!-- The file input field used as target for the file upload widget -->
-                        <input id="fileupload" type="file" name="image" multiple>
-                    </span>
-               </div>
-
-            </fieldset>
-
-        </div>
-
-    </form>
+<div class="container" ng-include="step">
 </div>
