--- a/angular/src/less/navbar-arrow.less
+++ b/angular/src/less/navbar-arrow.less
@@ -60,3 +60,49 @@
    }
 
 }
+
+.arrow {
+    position: relative;
+    background: #f6f6f6;
+    border: 0px;
+    color: inherit;
+    font-size: 22px;
+    padding-right: 10px;
+
+    &:after, &:before {
+        left: 100%;
+        top: 50%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+    }
+
+    &:after {
+        border-color: rgba(246, 246, 246, 0);
+        border-left-color: #f6f6f6;
+        border-width: 10px;
+        margin-top: -10px;
+    }
+
+    &:before {
+        border-color: rgba(102, 102, 102, 0);
+        border-left-color: #666;
+        border-width: 13px;
+        margin-top: -13px;
+    }
+
+    &:active,
+    &:hover {
+
+        text-decoration: none;
+
+        &:before {
+            border-color: rgba(137, 212, 205, 0);
+            border-left-color: #89d4cd;
+        }
+
+    }
+}
